Import wiredtiger: b1aab8db7d80e165d5da80aab0c0403772450997 from branch mongodb-3.0

ref: a5c67bd..b1aab8db7d
for: 3.0.14

SERVER-26889  Incorrect memory access on 3.0.13 triggers segmentation fault
WT-2711       Change statistics log configuration options